--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 41,
    "metadata": {
     "id": "z5szBnPVRgSz"
    },
@@ -268,20 +268,17 @@
     "\n",
     "    The return value h should be a hypothesis (+1 or -1) for the datapoint x given the weights w\n",
     "    \"\"\"\n",
-    "    n=0\n",
     "    h=0\n",
-    "    while n < len(x):\n",
-    "        h+=x[n]*w[n]      \n",
-    "        n+=1\n",
-    "         \n",
+    "    for n in range(len(x)):\n",
+    "        h+=x[n]*w[n]\n",
+    "    \n",
     "    return sign(h)\n",
     "\n",
     "def update_weights(x_t: tuple, y_t: int, w_t: tuple) -> tuple:\n",
-    "    wlist = [0] * len(x_t)\n",
-    "    i=0\n",
+    "    wlist = []#lege lijst\n",
     "    for i in range(len(x_t)): \n",
-    "        wlist[i] = w_t[i]+(y_t * x_t[i])\n",
-    "        i+=1\n",
+    "        wlist.append(w_t[i]+(y_t * x_t[i]))#voegt uitkomst per element aan lijst toe\n",
+    "\n",
     "    return tuple(wlist)\n",
     "\n",
     "def learn_weights(xn: list, yn: list) -> tuple:\n",
@@ -297,7 +294,23 @@
     "\n",
     "    The return value w should be a tuple containing the learned weights (w0, w1, w2)\n",
     "    \"\"\"\n",
-    "    w = [0] * len(yn)\n",
+    "    \n",
+    "    t=0\n",
+    "    converged = False\n",
+    "    w = initialize_weights(len(xn))\n",
+    "    while converged==False:\n",
+    "        converged = True\n",
+    "        for n in range(len(xn)):\n",
+    "            h = perceptron(xn[n],w)\n",
+    "\n",
+    "            if h != yn[n]:\n",
+    "                w = update_weights(xn[n],yn[n], w)\n",
+    "                converged=False\n",
+    "                t+=1\n",
+    "            \n",
+    "\n",
+    "\n",
+    "    \n",
     "    print(f'Converged in {t} iterations')\n",
     "    return w"
    ]
@@ -313,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 33,
    "metadata": {
     "id": "d2SKMILBRgSz"
    },
@@ -323,9 +336,6 @@
      "output_type": "stream",
      "text": [
       "perceptron works\n",
-      "[-3, 0, 0]\n",
-      "[-3, -3, 0]\n",
-      "[-3, -3, -3]\n",
       "update_weights works\n"
      ]
     }
@@ -375,10 +385,19 @@
    "metadata": {
     "id": "ZfNLWI6ORgSz"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged in 2 iterations\n",
+      "(0, -3.8, 1.8)\n"
+     ]
+    }
+   ],
    "source": [
-    "x3 = # FILL IN\n",
-    "y3 = # FILL IN\n",
+    "x3 = [[1,0.5,1.5],[1, 4.3, -0.3],[1, -3.2, 2.2]]\n",
+    "y3 = [1,-1,1]\n",
     "w = learn_weights(x3, y3)\n",
     "print(w)"
    ]
@@ -394,11 +413,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "id": "iLllVmtrRgS0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your test was correct\n"
+     ]
+    }
+   ],
    "source": [
     "def test_test_learn_weights():\n",
     "    assert len(w) == 3\n",
@@ -462,8 +489,13 @@
     "    n is the number of datapoints you want to generate\n",
     "    The return value should be a tuple with two elements (xn, yn), where xn and yn are both lists of length n\n",
     "    \"\"\"\n",
-    "    # FILL IN\n",
-    "    return xn, yn"
+    "\n",
+    "    xn = []\n",
+    "    yn = []\n",
+    "    tuplen = [xn,yn]\n",
+    "    \n",
+    "\n",
+    "    return tuple(tuplen)"
    ]
   },
   {
@@ -808,9 +840,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
